refactor: drop jsonld and commons io dependency
unused